<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/dialog_radius"
    android:orientation="vertical">

    <TextView
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:text="@string/select_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />

    <FrameLayout
        android:id="@+id/btn_quiz_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cylinder_black"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_1"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/btn_quiz_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cylinder_black"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_2"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_quiz_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cylinder_black"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_3"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_quiz_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cylinder_black"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_4"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_quiz_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="15dp"
        android:background="@drawable/cylinder_black"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_5"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

</LinearLayout>