<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginBottom="15dp"
        android:src="@drawable/spiral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="15dp"
        fontPath="fonts/Roboto-Medium.ttf"
        android:textSize="24sp"
        android:text="@string/dialog_title_scores"
        android:id="@+id/text_dialog_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />

    <TextView
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/dialog_content_scores"
        android:id="@+id/text_dialog_score_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/cylinder_blue"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_show_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/cylinder_blue"
        android:minWidth="140dp"
        android:paddingBottom="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/show_bag"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>

</LinearLayout>