<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:ignore="MissingPrefix">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/linear_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/access"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_morphology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/morphology"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_morphology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/synopsis"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/gallery"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <FrameLayout
                android:id="@+id/container_horizontal_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <FrameLayout

            android:id="@+id/btn_go_to_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="30dp"
            android:background="@drawable/cylinder_blue"
            android:minWidth="140dp"
            android:paddingBottom="10dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/go_to_place"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>