<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scroll_itinerary_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/tv_title"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            tools:ignore="MissingPrefix"/>

        <TextView
            android:id="@+id/tv_locale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/blue_dark"/>

        <LinearLayout
            android:id="@+id/linear_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/schedule"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/phone"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/web"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/audio"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <ViewStub
                android:id="@+id/stub_audioplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout="@layout/include_audio_player_view"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/gallery"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"/>

            <FrameLayout
                android:id="@+id/fragment_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/fragment_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <FrameLayout
                android:id="@+id/btn_go_to_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/cylinder_blue"
                android:minWidth="140dp"
                android:paddingBottom="10dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/go_to_place"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </FrameLayout>


        </FrameLayout>
    </LinearLayout>

</ScrollView>